# ChangeLog for dev-util/darcs
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/darcs/ChangeLog,v 1.84 2008/01/26 19:57:12 dcoutts Exp $

  26 Jan 2008; Duncan Coutts <dcoutts@gentoo.org> darcs-1.0.5.ebuild,
  darcs-1.0.6.ebuild, darcs-1.0.7.ebuild, darcs-1.0.8-r2.ebuild,
  darcs-1.0.9.ebuild, darcs-1.1.0_pre1.ebuild:
  Fix qa bug #207449 and fix installing docs.

  30 Dec 2007; Lennart Kolmodin <kolmodin@gentoo.org>
  files/darcs-1.1.0pre1-ghc68.patch, darcs-1.1.0_pre1.ebuild:
  Rewrite the GHC version patch. It should now work with all versions of GHC
  where darcs previously worked. This fixes bug #203507.

  30 Dec 2007; Lennart Kolmodin <kolmodin@gentoo.org> darcs-1.0.5.ebuild,
  darcs-1.0.6.ebuild, darcs-1.0.7.ebuild, darcs-1.0.8-r2.ebuild,
  darcs-1.0.9.ebuild:
  Add test that dev-tex/latex2html was built with USE=png or USE=gif for all
  affected darcs versions as the docs documentation will fail otherwise.
  This fixes bug #195801.

  21 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> darcs-1.1.0_pre1.ebuild:
  Add missing deps on parsec and regex-compat. Fixes bug #202887.
  Sadly have to drop some keywords because of the dep on the parsec package
  which does not yet have all the arch keywords. Also fix some quoting issues
  in the older versions of the ebuild.

*darcs-1.1.0_pre1 (20 Dec 2007)

  20 Dec 2007; Duncan Coutts <dcoutts@gentoo.org>
  +files/darcs-1.1.0pre1-ghc68.patch, darcs-1.0.9.ebuild,
  +darcs-1.1.0_pre1.ebuild:
  New version compatible with ghc-6.8. Mark older one as not working with
  ghc-6.8.

  31 Oct 2007; Duncan Coutts <dcoutts@gentoo.org> darcs-1.0.5.ebuild,
  darcs-1.0.6.ebuild, darcs-1.0.7.ebuild, darcs-1.0.8-r2.ebuild:
  Drop virtual/ghc in favour of dev-lang/ghc

  29 Aug 2007; Jeroen Roovers <jer@gentoo.org> darcs-1.0.9.ebuild:
  Marked ~hppa too.

  28 Aug 2007; nixnut <nixnut@gentoo.org> darcs-1.0.9.ebuild:
  Stable on ppc wrt bug 186845
