@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/darcs
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/darcs/ChangeLog,v 1.84 2008/01/26 19:57:12 dcoutts Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/darcs/ChangeLog,v 1.85 2008/05/25 11:59:07 kolmodin Exp $
+
+  25 May 2008; Lennart Kolmodin <kolmodin@gentoo.org> darcs-1.0.5.ebuild,
+  darcs-1.0.6.ebuild, darcs-1.0.7.ebuild, darcs-1.0.8-r2.ebuild,
+  darcs-1.0.9.ebuild, darcs-1.1.0_pre1.ebuild:
+  Use virtual/latex-base instead of virtual/tetex.
+  This enables the user to use any latex implementation, see bug #222501.
 
   26 Jan 2008; Duncan Coutts <dcoutts@gentoo.org> darcs-1.0.5.ebuild,
   darcs-1.0.6.ebuild, darcs-1.0.7.ebuild, darcs-1.0.8-r2.ebuild,
